--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>G3 ARCTECTS WEB</title>
     <link rel="stylesheet" href="styles/arctrcts.css ">
  </head>
- <body>
+ <body class="work-sans-font">
+    <header>
+        <nav class="navbar">
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
+    
+
+    </header>
+    <main>
+
+    </main> 
+    <footer>
+
+    </footer>
     
  </body>
  </html>
