added some fact

--- a/index.html
+++ b/index.html
@@ -43,11 +43,49 @@
 
             </div>
             <div class="our-features">
-                <h3 class="feature-title"> <span id="quick-list " class="test-lightgray">Quick list</span> <span>of Our</span> <span>Features</span> 
+                <h3 class="section-title"> <span id="quick-list " class="test-lightgray">Quick list</span> <span>of Our</span> <span class="test-primary">Features</span> 
                 </h3>
-                <p class="feature-drescription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="feature-drescription test-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 
             </div> 
+        </section>
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="test-lightgray fact-drescription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-container">
+             <!-- .fact-card*4>img.fact-icon+h4.fact-number+h4.fact-name--> <div class="fact-card display-flex">
+                <div>
+                    <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                <h4 class="fact-number">54</h4>
+                <h4 class="fact-name">Awards Winnings</h4>
+                </div>
+             </div>
+             <div class="fact-card">
+              <div>  <img src="images/icons/projects.png" alt="" class="fact-icon">
+                <h4 class="fact-number">1458</h4>
+                <h4 class="fact-name">Project Finished</h4>
+            </div>
+             </div>
+             <div class="fact-card">
+              <div>
+                <img src="images/icons/customers.png" alt="" class="fact-icon">
+                <h4 class="fact-number">590</h4>
+                <h4 class="fact-name">Clients Worked</h4>
+              </div>
+             </div>
+             <div class="fact-card">
+              <div>
+                <img src="images/icons/email.png" alt="" class="fact-icon">
+                <h4 class="fact-number">22578</h4>
+                <h4 class="fact-name">Email Send</h4>
+              </div>
+             </div>
+            </div>
+ 
+
+        </section>
+        <section>
+
         </section>
 
     </main> 
