--- a/index.html
+++ b/index.html
@@ -60,20 +60,20 @@
                 <h4 class="fact-name">Awards Winnings</h4>
                 </div>
              </div>
-             <div class="fact-card">
+             <div class="fact-card display-flex">
               <div>  <img src="images/icons/projects.png" alt="" class="fact-icon">
                 <h4 class="fact-number">1458</h4>
                 <h4 class="fact-name">Project Finished</h4>
             </div>
              </div>
-             <div class="fact-card">
+             <div class="fact-card display-flex">
               <div>
                 <img src="images/icons/customers.png" alt="" class="fact-icon">
                 <h4 class="fact-number">590</h4>
                 <h4 class="fact-name">Clients Worked</h4>
               </div>
              </div>
-             <div class="fact-card">
+             <div class="fact-card display-flex">
               <div>
                 <img src="images/icons/email.png" alt="" class="fact-icon">
                 <h4 class="fact-number">22578</h4>
@@ -86,6 +86,21 @@
         </section>
         <section>
 
+        </section>
+        <section class="our-sponsors">
+            <div class="sponsor-info">
+                <div class="section-title">Our Sponsors</div>
+               <p class="text-lightgray">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+               </p>
+            </div>
+            <div class="sponsor-company">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
         </section>
 
     </main> 
